<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--global-->
    <string name="app_name">Project Tracker</string>
    <string name="title_task_list_activity">Task list</string>
    <string name="title_edit_task_activity">Edit task</string>

    <!--menu items-->
    <string name="action_settings">Settings</string>
    <string name="action_new_task">Create</string>
    <string name="action_edit_task">Edit</string>
    <string name="action_remove_task">Remove</string>
    <string name="action_generate_tasks">Generate sample</string>
    <string name="action_modify_mode">Modify</string>

    <!--task list activity-->
    <string name="task_list_modify_ok_label">OK</string>

    <!--edit task activity strings-->
    <string name="edit_task_name_label">Name</string>
    <string name="edit_task_estimated_label">Estimated</string>
    <string name="edit_task_spent_label">Spent</string>
    <string name="edit_task_notes_label">Notes</string>
    <string name="edit_task_description_label">Description</string>
    <string name="edit_task_save_label">Save</string>
    <string name="edit_task_cancel_label">Cancel</string>
</resources>
